<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.cwi.moses.activities.SignInActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:id="@+id/txtEmail"/>
=======
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
>>>>>>> master
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<<<<<<< HEAD
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="Senha"
            android:inputType="textPassword"
            android:id="@+id/txtPassword"/>
    </android.support.design.widget.TextInputLayout>
=======
>>>>>>> master

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:hint="Confirma"
            android:inputType="textPassword"
            android:id="@+id/txtConfirm"/>
=======
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>
>>>>>>> master
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_in"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_up"/>

</LinearLayout>
