<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="br.com.cwi.moses.activities.TicketFormActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_margin="@dimen/frmMarginDefault"
        android:padding="@dimen/frmPaddingDefault">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/WalmartEditText">

            <EditText
                android:id="@+id/ticket_form_txt_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_ticket_title_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/WalmartEditText">

            <EditText
                android:id="@+id/ticket_form_txt_descricao"
                android:inputType="textMultiLine"
                android:hint="@string/txt_ticket_description_hint"
                android:gravity="top|start"
                android:maxLines="5"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:scrollbars="vertical"
            />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/singUp_btn_cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save_ticket"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/walmartClear"
            android:onClick="salvarTicket" />
    </LinearLayout>
</LinearLayout>
